GNOME Bugzilla – Bug 790170
avwait: Added passing-through and dropping signals
Last modified: 2017-12-08 19:58:14 UTC
See commit message
Created attachment 363346 [details] [review] avwait: Added passing-through and dropping signals passing-through is emitted when avwait starts passing through data, dropping is emitted when avwait stops pasing through data (e.g. because target-timecode and end-timecode respectively have been reached)
Maybe one signal with a boolean property instead of two different ones? I'm not too sure myself either.
Created attachment 363490 [details] [review] avwait: Added passing-through and dropping signals passing-through is emitted when avwait starts passing through data, dropping is emitted when avwait stops pasing through data (e.g. because target-timecode and end-timecode respectively have been reached)
Updated the patch to compile after latest avwait fixes, and also removed a line that sent out a wrong notification.
As mentioned on IRC, maybe these should be messages instead if there's no need to handle anything synchronously?
Created attachment 363853 [details] [review] avwait: Added passing-through and dropping signals passing-through is emitted when avwait starts passing through data, dropping is emitted when avwait stops pasing through data (e.g. because target-timecode and end-timecode respectively have been reached)
Turned them into messages, and also fixed some bugs related to changing the "mode" setting mid-flight (it confused avwait and sometimes we had an audible click).
Created attachment 363858 [details] [review] avwait: Added passing-through and dropping signals passing-through is emitted when avwait starts passing through data, dropping is emitted when avwait stops pasing through data (e.g. because target-timecode and end-timecode respectively have been reached)
Created attachment 365271 [details] [review] avwait: Added "avwait-status" element message "avwait-status" is posted when avwait starts or stops passing through data (e.g. because target-timecode and end-timecode respectively have been reached). The attached structure includes a "dropping" boolean (set to TRUE if we are currently dropping data, FALSE otherwise), and a "running-time" GST_CLOCK_TIME which contains the running time of the change.
Comment on attachment 363858 [details] [review] avwait: Added passing-through and dropping signals Obsoleted previous patch, but the only difference is really the commit message. :)
Review of attachment 365271 [details] [review]: Looks good now.